# ghrweb

./: .gitignore  CODEOWNERS  README.md  astro.config.mjs  package-lock.json  package.json  post_interview_prd.md  pyproject.toml  requirements.txt  starwind.config.json  wrangler.json
.cursor/rules/: project-context.mdc  update-project-docs.mdc
.github/scripts/: _common.py  content_review.py  image_qa.py  scrape_vvgn.py  sync_deletions.py  translate.py  verify_content.py
.github/scripts/tests/: conftest.py  test_content_review.py  test_image_qa.py  test_sync_deletions.py  test_translate.py  test_verify_content.py
.github/workflows/: content-review.yml  image-qa.yml  test.yml  translate.yml
data/scrapes/vvgn/: content-manager-post-inventory.csv  (+4 more)
docs/: access-protocol.md  background.md  cloudflare-ownership-and-operations.md  content-style-guide.md  design-system.md  faq.md  github-access-control.md  notion-collaborative.md  pending-tasks.md  requirements.md  tech-stack.md  tone-and-voice-guidelines.md  vvgn-content-manager-dossier.md  workflows.md
docs/archive/: background.md  pitch_14042026.md
docs/for_stakeholders/: access-protocol.md  stakeholder-pitch.md
public/admin/: config.yml  index.html
scripts/: scrape_vvgn.py
src/: content.config.ts  oauth.ts
src/__tests__/: admin.test.ts  i18n.test.ts  oauth.test.ts  site.test.ts
src/components/: BrutButton.astro  BrutCard.astro  Footer.astro  Header.astro  LanguagePicker.astro
src/i18n/: ui.ts  utils.ts
src/layouts/: Layout.astro
src/pages/: index.astro
src/styles/: global.css  starwind.css
(+127 files in other folders)
